force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Amount__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Amount__c</fullName>
    <label>Income Total</label>
    <summarizedField>OneCRM__Income_Line_Item__c.OneCRM__Amount__c</summarizedField>
    <summaryForeignKey>OneCRM__Income_Line_Item__c.OneCRM__Income__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>