force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Amount_Outstanding__c</fullName>
    <formula>IF(OneCRM__Amount__c - OneCRM__Paid__c &gt; 0, OneCRM__Amount__c - OneCRM__Paid__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>