force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Amount_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Amount_Past_Due__c</fullName>
    <label>Amount Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>