force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Address</label>
    <referenceTo>OneCRM__Communication__c</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>