force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Campaign__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>