force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Check_Number__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Check_Number__c</fullName>
    <description>Can be used for Check# or money order # etc.</description>
    <label>Check Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>