force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Credit_Card__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Credit Card</label>
    <referenceTo>OneCRM__Credit_Card__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>