force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>