force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Date_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Date_Invoice_Sent__c</fullName>
    <label>Date Invoice Sent</label>
    <type>DateTime</type>
</CustomField>