force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Day_Number__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Day_Number__c</fullName>
    <formula>DAY(OneCRM__Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>