force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Dedication_Text__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Dedication_Text__c</fullName>
    <label>Dedication Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>