force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Donor__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Donor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Donor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>