force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Donor_Email__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Donor_Email__c</fullName>
    <description>For email invoices</description>
    <label>Donor Email</label>
    <type>Email</type>
</CustomField>