force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Donor_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Donor_Email_Formula__c</fullName>
    <formula>IF (OneCRM__Donor__r.RecordType.Name == &apos;Family&apos;,
            IF(OneCRM__Related_Contact__c != &apos;&apos; &amp;&amp; OneCRM__Related_Contact__r.HasOptedOutOfEmail == false, OneCRM__Related_Contact__r.Email,
            IF(OneCRM__Donor__r.OneCRM__Primary_Contact__c  != &apos;&apos; &amp;&amp; OneCRM__Donor__r.OneCRM__Primary_Contact__r.Email!= &apos;&apos; &amp;&amp; OneCRM__Donor__r.OneCRM__Primary_Contact__r.HasOptedOutOfEmail == false, OneCRM__Donor__r.OneCRM__Primary_Contact__r.Email,
            IF(OneCRM__Donor__r.OneCRM__Secondary_Contact__c  != &apos;&apos; &amp;&amp; OneCRM__Donor__r.OneCRM__Secondary_Contact__r.Email!= &apos;&apos;, OneCRM__Donor__r.OneCRM__Secondary_Contact__r.Email,&apos;&apos;))), OneCRM__Donor__r.OneCRM__Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Email</label>
    <type>Text</type>
</CustomField>