force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Exchange_Rate__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>For FUTURE functionality</inlineHelpText>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>