force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__HonorMemory__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__HonorMemory__c</fullName>
    <description>&quot;This donation is made in [honor/memory] of &quot;</description>
    <inlineHelpText>This donation is made in honor of or in memory of...</inlineHelpText>
    <label>Because of...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>