force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Last_Auto_Payment_Time__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Last_Auto_Payment_Time__c</fullName>
    <description>The time of the last attempted Auto Payment.</description>
    <inlineHelpText>The time of the last attempted Auto Payment.</inlineHelpText>
    <label>Last Auto Payment Time</label>
    <type>DateTime</type>
</CustomField>