force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Last_Downloaded__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Last_Downloaded__c</fullName>
    <label>Last Downloaded</label>
    <type>DateTime</type>
</CustomField>