force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Last_Emailed__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Last_Emailed__c</fullName>
    <label>Last Emailed</label>
    <type>DateTime</type>
</CustomField>