force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Notes__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>