force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Paid__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Paid Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>