force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment program that is paying off this income</description>
    <inlineHelpText>The payment program that is paying off this income</inlineHelpText>
    <label>Payment Plan</label>
    <referenceTo>OneCRM__Payment_Program__c</referenceTo>
    <relationshipLabel>Incomes (Payment Plan)</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>