force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Payment_Processor_ID__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Payment_Processor_ID__c</fullName>
    <description>the id of the processor to use when charging this income</description>
    <label>Payment Processor ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>