force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Payment_Program__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Payment_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payment Program to which this Charge belongs.</description>
    <inlineHelpText>The Payment Program to which this Charge belongs.</inlineHelpText>
    <label>Payment Program</label>
    <referenceTo>OneCRM__Payment_Program__c</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>