force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
                <default>true</default>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>External Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>