force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Portal_Link__c</fullName>
    <description>Portal link for ChabadOne Portals</description>
    <label>Portal Link</label>
    <type>Url</type>
</CustomField>