force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Processing_Status__c</fullName>
    <description>Determines what is happening with this Charge. Used primarily to track automatic processing.</description>
    <inlineHelpText>Determines what is happening with this Charge.</inlineHelpText>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Awaiting Auto Process</fullName>
            </value>
            <value>
                <fullName>Waiting Manual Process</fullName>
            </value>
            <value>
                <fullName>Auto Processing</fullName>
            </value>
            <value>
                <fullName>Auto Payment Error</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>