force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Recognition__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Recognition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Not the actual donor, but another individual/entity that also deserves credit for the income</description>
    <label>Recognition</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incomes (Recognition)</relationshipLabel>
    <relationshipName>IncomesRecognition</relationshipName>
    <type>Lookup</type>
</CustomField>