force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Recognition_Contact__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Recognition_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Not the actual donor, but another individual/entity that also deserves credit for the income (Contact)</description>
    <label>Recognition (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incomes (Recognition (Contact))</relationshipLabel>
    <relationshipName>Incomes_Recognition</relationshipName>
    <type>Lookup</type>
</CustomField>