force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Recognition_Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Recognition_Type__c</fullName>
    <description>The reason for the recognition</description>
    <label>Recognition Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solicited By</fullName>
            </value>
            <value>
                <fullName>Dedicated To</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>