force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The &quot;Related Contact&quot; field on the Income</description>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>