force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Scribe_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Scribe_Error_Message__c</fullName>
    <label>Scribe Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>