force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Scribe_Letter__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Scribe_Letter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used specifically for the Charge Processor. (Which is only created by the Payment Program Processor)</description>
    <label>Scribe Letter</label>
    <referenceTo>XGen__Template_Content__c</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>