force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Send_Invoice__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Send_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, will fire workflow to send invoice to donor.</description>
    <label>Send Invoice</label>
    <type>Checkbox</type>
</CustomField>