force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Status_Code__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Status_Code__c</fullName>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>