force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__StatusID__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__StatusID__c</fullName>
    <label>StatusID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>