force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__StatusReason__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__StatusReason__c</fullName>
    <label>Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>