force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__StatusText__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__StatusText__c</fullName>
    <label>Status Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>