force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Token__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Token__c</fullName>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>