force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Transaction_Number__c</fullName>
    <label>Transaction Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>