force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__TransactionId__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__TransactionId__c</fullName>
    <label>TransactionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>