force-app/main/default/objects/OneCRM__Income__c/fields/OneCRM__Year_Number__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Year_Number__c</fullName>
    <formula>TEXT( YEAR(OneCRM__Date__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Number</label>
    <type>Text</type>
</CustomField>