force-app/main/default/objects/OneCRM__Income__c/recordTypes/OneCRM__Charge.recordType-meta.xml
<RecordType>
    <fullName>OneCRM__Charge</fullName>
    <active>true</active>
    <description>Used for pledges, etc</description>
    <label>Charge</label>
</RecordType>