force-app/main/default/objects/OneCRM__Income__c/recordTypes/OneCRM__Payment.recordType-meta.xml
<RecordType>
    <fullName>OneCRM__Payment</fullName>
    <active>true</active>
    <description>used for payments (actual transfer of funds)</description>
    <label>Payment</label>
</RecordType>