force-app/main/default/objects/OneCRM__Income__c/validationRules/OneCRM__Numeric_Check_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>OneCRM__Numeric_Check_Number</fullName>
    <active>true</active>
    <errorConditionFormula>! ISBLANK( OneCRM__Check_Number__c )
            &amp;&amp;
            ! ISNUMBER( OneCRM__Check_Number__c)</errorConditionFormula>
    <errorDisplayField>OneCRM__Check_Number__c</errorDisplayField>
    <errorMessage>Check number must be numeric</errorMessage>
</ValidationRule>