force-app/main/default/objects/OneCRM__Income__c/validationRules/OneCRM__Numeric_Status_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>OneCRM__Numeric_Status_ID</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(OneCRM__StatusID__c) &amp;&amp; !ISNUMBER( OneCRM__StatusID__c )</errorConditionFormula>
    <errorDisplayField>OneCRM__StatusID__c</errorDisplayField>
    <errorMessage>StatusId must be numeric.</errorMessage>
</ValidationRule>